k8s-manifest/ashulb1.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ashu-app-deploy
  name: ashulb1
spec:
  ports:
  - port: 80 # port of LB extenal and internal 
    protocol: TCP
    targetPort: 80 # port pod / container where app is running
  selector:
    app: ashu-app-deploy
  type: LoadBalancer
status:
  loadBalancer: {}
