k8s-manifest/internal_lb.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ashu-app-deploy
  name: ashu-internal-lb
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ashu-app-deploy
  type: ClusterIP
status:
  loadBalancer: {}
