k8s-manifest/ingress-rule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ashu-app-rule
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx # which product 
  rules:
  - host: ashume.adhocnet.org 
    http:
      paths:
      - path: /  # home page 
        pathType: Prefix
        backend:
          service:
            name: ashu-internal-lb # internal LB 
            port:
              number: 80 # lb port
